--- a/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
+++ b/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <data>
-    <template id="website_helpdesk_maintenance_form.ticket_submit" inherit_id="website_helpdesk_form.ticket_submit">
-        <xpath expr="//div[@class='container']" position="after">
-            <div class="form-group row form-field o_website_form_required">
-                <div class="col-lg-3 col-md-4 text-right">
-                    <label class="col-form-label">Equipo</label>
-                </div>
-                <div class="col-lg-7 col-md-8">
-                    <input type="text" class="form-control o_website_form_input"/>
-                </div>
-            </div>
+
+    <template id="website_helpdesk_maintenance_template" name="Equipment" inherit_id="website_helpdesk_form.ticket_submit" groups="base.group_portal">
+        <xpath expr="//field[@name='name']" position="before">
+            <label class="col-form-label" >Equipment</label>
         </xpath>
     </template>
-</data>
+
 </odoo>
