--- a/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
+++ b/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
@@ -22,15 +22,15 @@
       <t t-set="classes" t-value="'col-12 col-lg flex-lg-grow-0 d-print-none'"/>
 
       <t t-set="title">
-          <h2 class="mb-0"><b t-field="sale_order.amount_total"/> </h2>
+          <h2 class="mb-0"><b t-field=""/> </h2>
       </t>
       <t t-set="entries">
           <ul class="list-group list-group-flush flex-wrap flex-row flex-lg-column">
               <li class="list-group-item flex-grow-1">
-                  <a t-if="sale_order.has_to_be_signed(True)" role="button" class="btn btn-primary btn-block mb8" data-toggle="modal" data-target="#modalaccept" href="#">
+                  <a t-if="" role="button" class="btn btn-primary btn-block mb8" data-toggle="modal" data-target="#modalaccept" href="#">
                       <i class="fa fa-check"/> Accept &amp; Sign
                   </a>
-                  <a t-elif="sale_order.has_to_be_paid(True)" role="button" class="btn btn-primary btn-block mb8" data-toggle="modal" data-target="#modalaccept" href="#">
+                  <a t-elif="" role="button" class="btn btn-primary btn-block mb8" data-toggle="modal" data-target="#modalaccept" href="#">
                       <i class="fa fa-check"/> <t t-if="not sale_order.signature">Accept &amp; Pay</t><t t-else="">Pay now</t>
                   </a>
                   <div class="o_download_pdf btn-toolbar flex-sm-nowrap">
@@ -39,48 +39,6 @@
                       </div>
                       <div class="btn-group flex-grow-1 mb-1">
                           <a class="btn btn-secondary btn-block o_print_btn o_portal_invoice_print" t-att-href="sale_order.get_portal_url(report_type='pdf')" id="print_invoice_report" title="Print" target="_blank"><i class="fa fa-print"/> Print</a>
-                      </div>
-                  </div>
-              </li>
-
-              <li class="navspy list-group-item pl-0 flex-grow-1" t-ignore="true" role="complementary">
-                  <ul class="nav flex-column bs-sidenav"/>
-              </li>
-
-              <t t-if="not sale_order.is_expired and sale_order.state in ['draft', 'sent']">
-                  <li t-if="sale_order.remaining_validity_days &gt; 0" class="list-group-item">
-                      <small><b class="text-muted">This offer expires in</b></small>
-                      <div class="day_counter">
-                          <i class="fa fa-clock-o" aria-title="Dates" title="Dates"/>
-                          <t t-esc="sale_order.remaining_validity_days"/>
-                          <t t-if="sale_order.remaining_validity_days &gt; 1">days</t><t t-else="">day</t>
-                      </div>
-                  </li>
-                  <li t-if="sale_order.amount_undiscounted &gt; sale_order.amount_untaxed" class="list-group-item flex-grow-1">
-                      <small><b class="text-muted">Your advantage</b></small>
-                      <small>
-                          <b t-field="sale_order.amount_undiscounted" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: sale_order.pricelist_id.currency_id}" style="text-decoration: line-through" class="d-block mt-1"/>
-                      </small>
-                      <t t-if="sale_order.amount_untaxed == sale_order.amount_total">
-                          <h4 t-field="sale_order.amount_total" class="text-success"/>
-                      </t>
-                      <t t-else="">
-                          <h4 t-field="sale_order.amount_untaxed" class="text-success mb-0"/>
-                          <small>(<span t-field="sale_order.amount_total"/> Incl. tax)</small>
-                      </t>
-                  </li>
-              </t>
-
-              <li t-if="sale_order.user_id" class="list-group-item flex-grow-1">
-                  <div class="small mb-1"><strong class="text-muted">Your Contact</strong></div>
-                  <div class="row flex-nowrap">
-                      <div class="col flex-grow-0 pr-2">
-                          <img class="rounded-circle mr4 float-left o_portal_contact_img" t-if="sale_order.user_id.image" t-att-src="image_data_uri(sale_order.user_id.image)" alt="Contact"/>
-                          <img class="rounded-circle mr4 float-left o_portal_contact_img" t-if="not sale_order.user_id.image" src="/web/static/src/img/placeholder.png" alt="Contact"/>
-                      </div>
-                      <div class="col pl-0" style="min-width: 150px">
-                          <span t-field="sale_order.user_id" t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;name&quot;, &quot;phone&quot;], &quot;no_marker&quot;: True}"/>
-                          <a href="#discussion" class="small"><i class="fa fa-comment"/> Send message</a>
                       </div>
                   </div>
               </li>
