--- a/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
+++ b/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
@@ -15,7 +15,7 @@
     </template>
 
     <template id="website_helpdesk_maintenance_tickets_followup_template" name="Helpdesk Maintenance Report" inherit_id="helpdesk.tickets_followup">
-        <xpath expr="//t[@t-call='portal.portal_record_layout']" position="before">
+        <xpath expr="//t[@t-set='card_header']" position="before">
           <div class="row mt16 o_portal_sale_sidebar">
   <!-- Sidebar -->
   <t t-call="portal.portal_record_sidebar">
