--- a/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
+++ b/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
@@ -15,7 +15,7 @@
     </template>
 
     <template id="website_helpdesk_maintenance_tickets_followup_template" name="Helpdesk Maintenance Report" inherit_id="helpdesk.tickets_followup">
-      <xpath expr="//t[@t-set='card_header']" position="before">
+      <xpath expr="//div[@class='o_portal_messages_container mt32']" position="before">
         <div class="row mt16">
           Test
         </div>
