--- a/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
+++ b/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
@@ -16,9 +16,22 @@
 
     <template id="website_helpdesk_maintenance_tickets_followup_template" name="Helpdesk Maintenance Report" inherit_id="helpdesk.tickets_followup">
       <xpath expr="//div[@class='o_portal_messages_container mt32']" position="before">
-        <div class="row mt16">
-          Test
-        </div>
+        <t t-call="portal.portal_record_layout">
+          <t t-set="card_header">
+            <div class="row no-gutters">
+              <div class="col-md">
+                <h5 class="mb-1 mb-md-0">
+                  <span t-field="ticket.name"/>
+                  <small class="text-muted"> (#<span t-field="ticket.id"/>)</small>
+                </h5>
+              </div>
+              <div class="col-md text-md-right">
+                <small class="text-right">Status:</small>
+                <span t-field="ticket.stage_id.name" class=" badge badge-pill badge-info" title="Current stage of this ticket"/>
+              </div>
+            </div>
+          </t>
+        </t>
       </xpath>
     </template>
 
