--- a/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
+++ b/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
@@ -18,16 +18,12 @@
       <xpath expr="//div[@class='o_portal_messages_container mt32']" position="before">
         <t t-call="portal.portal_record_layout">
           <t t-set="card_header">
-            <div class="row no-gutters">
-              <div class="col-md">
-                <h5 class="mb-1 mb-md-0">
-                  <span t-field="ticket.name"/>
-                  <small class="text-muted"> (#<span t-field="ticket.id"/>)</small>
-                </h5>
+            <div class="o_download_pdf btn-toolbar flex-sm-nowrap">
+              <div class="btn-group flex-grow-1 mr-1 mb-1">
+                <a class="btn btn-secondary btn-block o_download_btn" t-att-href="sale_order.get_portal_url(report_type='pdf', download=True)" title="Download"><i class="fa fa-download"/> Download</a>
               </div>
-              <div class="col-md text-md-right">
-                <small class="text-right">Status:</small>
-                <span t-field="ticket.stage_id.name" class=" badge badge-pill badge-info" title="Current stage of this ticket"/>
+              <div class="btn-group flex-grow-1 mb-1">
+                <a class="btn btn-secondary btn-block o_print_btn o_portal_invoice_print" t-att-href="sale_order.get_portal_url(report_type='pdf')" id="print_invoice_report" title="Print" target="_blank"><i class="fa fa-print"/> Print</a>
               </div>
             </div>
           </t>
