--- a/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
+++ b/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
@@ -20,10 +20,10 @@
           <t t-set="card_header">
             <div class="o_download_pdf btn-toolbar flex-sm-nowrap">
               <div class="btn-group flex-grow-1 mr-1 mb-1">
-                <a class="btn btn-secondary btn-block o_download_btn" t-att-href="sale_order.get_portal_url(report_type='pdf', download=True)" title="Download"><i class="fa fa-download"/> Download</a>
+                <a class="btn btn-secondary btn-block o_download_btn" t-att-href="" title="Download"><i class="fa fa-download"/> Download</a>
               </div>
               <div class="btn-group flex-grow-1 mb-1">
-                <a class="btn btn-secondary btn-block o_print_btn o_portal_invoice_print" t-att-href="sale_order.get_portal_url(report_type='pdf')" id="print_invoice_report" title="Print" target="_blank"><i class="fa fa-print"/> Print</a>
+                <a class="btn btn-secondary btn-block o_print_btn o_portal_invoice_print" t-att-href="" id="print_invoice_report" title="Print" target="_blank"><i class="fa fa-print"/> Print</a>
               </div>
             </div>
           </t>
