--- a/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
+++ b/maintenance_helpdesk/views/helpdesk_maintenance_templates.xml
@@ -18,14 +18,9 @@
       <xpath expr="//div[@class='o_portal_messages_container mt32']" position="before">
         <t t-call="portal.portal_record_layout">
           <t t-set="card_header">
-            <div class="o_download_pdf btn-toolbar flex-sm-nowrap">
-              <div class="btn-group flex-grow-1 mr-1 mb-1">
-                <a class="btn btn-secondary btn-block o_download_btn" t-att-href="" title="Download"><i class="fa fa-download"/> Download</a>
-              </div>
-              <div class="btn-group flex-grow-1 mb-1">
-                <a class="btn btn-secondary btn-block o_print_btn" t-att-href="" id="" title="Print" target="_blank"><i class="fa fa-print"/> Print</a>
-              </div>
-            </div>
+            <a t-if="sale_order.has_to_be_signed(True)" role="button" class="btn btn-primary btn-block mb8" data-toggle="modal" data-target="#modalaccept" href="#">
+                <i class="fa fa-check"/> Accept &amp; Sign
+            </a>
           </t>
         </t>
       </xpath>
