--- a/continuous_improvement/views/continuous_improvement_views.xml
+++ b/continuous_improvement/views/continuous_improvement_views.xml
@@ -126,6 +126,7 @@
                     </div>
                     <group>
                         <group>
+                            <field name="user_id"/>
                             <field name="assigned_id" string="Assigned"/>
                             <field name="type_id" widget="many2one"/>
                         </group>
@@ -144,6 +145,7 @@
                 <tree>
                     <field name="name"/>
                     <field name="assigned_id"/>
+                    <field name="user_id"/>
                     <field name="type_id"/>
                     <field name="stage_id"/>
                 </tree>
@@ -163,6 +165,7 @@
                                 <strong><field name="name"/></strong>
                                 <field name="stage_id"/>
                                 <field name="assigned_id"/>
+                                <field name="user_id"/>
                                 <field name="type_id"/>
                             </div>
                         </div>
