--- a/regulatory_issue/views/regulatory_technical_criteria_views.xml
+++ b/regulatory_issue/views/regulatory_technical_criteria_views.xml
@@ -26,7 +26,7 @@
         </record>
 
         <record id="regulatory_technical_criteria_action" model="ir.actions.act_window">
-            <field name="name">legal Documentation</field>
+            <field name="name">Technical Criteria</field>
             <field name="res_model">regulatory.technical.criteria</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
