--- a/regulatory_issue/views/regulatory_technical_file_views.xml
+++ b/regulatory_issue/views/regulatory_technical_file_views.xml
@@ -26,7 +26,7 @@
         </record>
 
         <record id="regulatory_technical_file_action" model="ir.actions.act_window">
-            <field name="name">legal Documentation</field>
+            <field name="name">Technical File</field>
             <field name="res_model">regulatory.technical.file</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
