--- a/regulatory_issue/views/regulatory_legal_documentation_views.xml
+++ b/regulatory_issue/views/regulatory_legal_documentation_views.xml
@@ -26,7 +26,7 @@
         </record>
 
         <record id="regulatory_legal_documentation_action" model="ir.actions.act_window">
-            <field name="name">legal Documentation</field>
+            <field name="name">Legal Documentation</field>
             <field name="res_model">regulatory.legal.documentation</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
