--- a/regulatory_issue/views/regulatory_license_views.xml
+++ b/regulatory_issue/views/regulatory_license_views.xml
@@ -38,7 +38,8 @@
         <menuitem
             id="regulatory_management_license"
             parent="regulatory_management_menu"
-            action="regulatory_license_action"/>
+            action="regulatory_license_action"
+            sequence="4"/>
 
     </data>
 </odoo>
