--- a/regulatory_issue/views/regulatory_technical_criteria_views.xml
+++ b/regulatory_issue/views/regulatory_technical_criteria_views.xml
@@ -35,7 +35,8 @@
         <menuitem
             id="regulatory_technical_criteria"
             parent="regulatory_management_menu"
-            action="regulatory_technical_criteria_action"/>
+            action="regulatory_technical_criteria_action"
+            sequence="2"/>
 
     </data>
 </odoo>
