--- a/sdc_maintenance/views/maintenance_equipment_views.xml
+++ b/sdc_maintenance/views/maintenance_equipment_views.xml
@@ -412,8 +412,8 @@
 
     <!-- Software Type Views-->
     <record id="maintenance_software_type_view_form" model="ir.ui.view">
-        <field name="name">maintenance.software.type.form</field>
-        <field name="model">maintenance.software.type</field>
+        <field name="name">maintenance.equipment.software.type.form</field>
+        <field name="model">maintenance.equipment.software.type</field>
         <field name="type">form</field>
         <field name="arch" type="xml">
             <form string="Software Type">
@@ -437,8 +437,8 @@
     </record>
     
     <record id="maintenance_software_type_view_tree" model="ir.ui.view">
-        <field name="name">maintenance.software.type.tree</field>
-        <field name="model">maintenance.software.type</field>
+        <field name="name">maintenance.equipment.software.type.tree</field>
+        <field name="model">maintenance.equipment.software.type</field>
         <field name="type">tree</field>
         <field name="arch" type="xml">
             <tree string="Software Type">
@@ -451,7 +451,7 @@
 
     <record id="maintenance_software_type_action_view" model="ir.actions.act_window">
             <field name="name">Software Type</field>
-            <field name="res_model">maintenance.software.type</field>
+            <field name="res_model">maintenance.equipment.software.type</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
     </record>
