--- a/sdc_maintenance/views/maintenance_equipment_views.xml
+++ b/sdc_maintenance/views/maintenance_equipment_views.xml
@@ -281,8 +281,8 @@
 
              <!-- zone-->
         <record id="view_line_form" model="ir.ui.view">
-            <field name="name">maintenance.equipment.zone.form</field>
-            <field name="model">maintenance.equipment.zone</field>
+            <field name="name">maintenance.zone.form</field>
+            <field name="model">maintenance.zone</field>
             <field name="type">form</field>
             <field name="arch" type="xml">
                 <form string="Zone">
@@ -306,8 +306,8 @@
             </field>
         </record>
         <record id="view_line_tree" model="ir.ui.view">
-            <field name="name">maintenance.equipment.zone.tree</field>
-            <field name="model">maintenance.equipment.zone</field>
+            <field name="name">maintenance.zone.tree</field>
+            <field name="model">maintenance.zone</field>
             <field name="type">tree</field>
             <field name="arch" type="xml">
                 <tree string="Zone line">
@@ -321,7 +321,7 @@
 
         <record id="maintenance_action_view_zone" model="ir.actions.act_window">
             <field name="name">Zone</field>
-            <field name="res_model">maintenance.equipment.zone</field>
+            <field name="res_model">maintenance.zone</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
         </record>
