--- a/regulatory_issue/views/regulatory_technical_criteria_views.xml
+++ b/regulatory_issue/views/regulatory_technical_criteria_views.xml
@@ -5,13 +5,25 @@
             <field name="name">regulatory.technical.criteria.view.form</field>
             <field name="model">regulatory.technical.criteria</field>
             <field name="arch" type="xml">
-                <form>
-                    <sheet>
-                        <group>
-                            <field name="name"/>
-                        </group>
-                    </sheet>
-                </form>
+              <form string="Technical Criteria">
+                  <sheet>
+                      <div class="oe_title">
+                          <label for="name" class="oe_edit_only" string="Name"/>
+                          <h1>
+                              <field name="name" placeholder="Certificate Name"/>
+                          </h1>
+                  </div>
+                  <group>
+                      <group>
+                          <field name="ctni"/>
+                          <field name="technical_file"/>
+                          <field name="criterion_expiration_date" widget="date"/>
+                          <field name="date_expiration_authenticated_seal" widget="date"/>
+                      </group>
+                  </group>
+                  <field name='description' placeholder="Description ......."/>
+              </sheet>
+              </form>
             </field>
         </record>
 
@@ -21,6 +33,10 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
+                    <field name="ctni"/>
+                    <field name="technical_file"/>
+                    <field name="criterion_expiration_date" widget="date"/>
+                    <field name="date_expiration_authenticated_seal" widget="date"/>
                 </tree>
             </field>
         </record>
