--- a/regulatory_issue/views/regulatory_license_views.xml
+++ b/regulatory_issue/views/regulatory_license_views.xml
@@ -5,14 +5,25 @@
             <field name="name">regulatory_license_form.form</field>
             <field name="model">regulatory.license</field>
             <field name="arch" type="xml">
-                <form>
-                    <sheet>
+              <form string="License">
+                  <sheet>
+                      <div class="oe_title">
+                          <label for="name" class="oe_edit_only" string="Name"/>
+                          <h1>
+                              <field name="name" placeholder="License"/>
+                          </h1>
+                      </div>
+                      <group>
                         <group>
-                            <field name="name"/>
-                            <field name="file"/>
+                          <field name="ctni"/>
+                          <field name="email"/>
+                          <field name="expiration_date" widget="date"/>
+                          <field name="file"/>
                         </group>
+                      </group>
+                      <field name='description' placeholder="Description ......."/>
                     </sheet>
-                </form>
+              </form>
             </field>
         </record>
         <record id="regulatory_license_tree" model="ir.ui.view">
@@ -21,6 +32,9 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
+                    <field name="ctni"/>
+                    <field name="email"/>
+                    <field name="expiration_date" widget="date"/>
                 </tree>
             </field>
         </record>
