--- a/equipment/views/equipment_view.xml
+++ b/equipment/views/equipment_view.xml
@@ -42,6 +42,7 @@
                         <group>
 													<group>
 															<field name="client_id" widget="many2one"/>
+															<field name="modality_id" widget="many2one"/>
 													</group>
 													<group>
 															<field name="active"/>
