--- a/equipment/views/equipment_modality_view.xml
+++ b/equipment/views/equipment_modality_view.xml
@@ -18,7 +18,7 @@
 											</div>
 							<group>
 								<group>
-									<field name="manager_id" widget="many2one"/>
+									<field name="helpdesk_team_id" widget="many2one"/>
 								</group>
 							</group>
 		                <field name="note" nolabel="1"/>
