--- a/technical_support_helpdesk/views/helpdesk_views.xml
+++ b/technical_support_helpdesk/views/helpdesk_views.xml
@@ -6,14 +6,14 @@
             <field name="inherit_id" ref="helpdesk.helpdesk_ticket_view_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//button[@name='assign_ticket_to_self']" position="before">
-                    <button string="New Request" name="%(maintenance_action_request_new)d" type="action" class="oe_highlight"/>
+                    <button string="New Request" name="%(technical_support_action_request_new)d" type="action" class="oe_highlight"/>
                 </xpath>
                 <button name="open_customer_tickets" position="after">
                     <button class="oe_stat_button" type="action"
-                            name="%(ticket_action_maintenance)d" icon="fa-pencil-square-o"
+                            name="%(ticket_action_technical_support)d" icon="fa-pencil-square-o"
                             >
                         <div class="o_stat_info">
-                            <field name="cm_count" class="o_stat_value"/>
+                            <field class="o_stat_value"/>
                             <span class="o_stat_text">Request</span>
                         </div>
                     </button>
